AWS-KOPS/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
    - host: app.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: fleetman-webapp
              servicePort: 80
